# asteroids

./: README.md  manage.py  pyproject.toml
settings/: settings.yml
src/asteroids/: __init__.py  __main__.py  app.py  constants.py
src/asteroids/entities/: __init__.py  asteroid.py  bullet.py  entity_id.py  ship.py
src/asteroids/scenes/: __init__.py  commands.py  menu.py  pause.py
src/asteroids/scenes/asteroids/: __init__.py  bootstrap.py  draw_ops.py  models.py  pipeline.py  scene.py  spawn.py  systems.py
src/asteroids/scenes/asteroids/systems/: __init__.py  render.py
