[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "asteroids"
version = "0.1.0"
description = "Asteroids clone built with mini-arcade-core and pygame backend."
authors = [{ name = "Mini Arcade Team" }]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
  "mini-arcade-core~=1.1",
  "mini-arcade-pygame-backend~=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.3",
  "black~=24.10",
  "isort~=5.13",
  "mypy~=1.5",
  "pylint~=3.3",
]

[tool.poetry]
packages = [{ include = "asteroids", from = "src" }]

[tool.black]
line-length = 79
target-version = ["py39"]
extend-exclude = '''/(
    docs
  | tests
)/'''

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["asteroids"]
skip = [".venv", "venv", "env", "build", "dist", "docs", "tests"]

[tool.mypy]
python_version = "3.9"
packages = ["asteroids"]
ignore_missing_imports = true
strict = false

[tool.pylint.messages_control]
disable = [
  "logging-fstring-interpolation",
  "too-few-public-methods",
  "fixme",
  "duplicate-code",
  "wrong-import-order",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-arguments",
]

[tool.pylint.MAIN]
ignore-paths = [
  "^\\.venv",
  "^venv",
  "^tests",
  "^env",
  "^build",
  "^dist",
  "^docs",
]

[project.scripts]
asteroids = "asteroids.app:run"

[tool.mini-arcade.game]
id = "asteroids"
entrypoint = "manage.py"
source_roots = ["src"]
